--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^6.0.10"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jshint": "^2.10.2",
+    "sync-request": "^6.1.0"
   }
 }
